[CrOS Multidevice] Autofocus the forward buttons in MultiDevice setup flow.

multidevice-setup cannot directly grab the #forward-button because it is
owned by multidevice-setup-post-oobe, so it fires a 'focus-forward-button'
up to multidevice-setup-post-oobe.

Bug: 879418
Change-Id: I5c194a11a5393ea7fd2cffb286920d3a0a17a040
Reviewed-on: https://chromium-review.googlesource.com/c/1265819
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598607}
Former-commit-id: 1ba3fb04f3c36246743e369d94d4a11223196ca7