chrome/browser/ui/webui/chromeos/login/multidevice_setup_screen_handler.cc
@@ -35,8 +35,8 @@ void MultiDeviceSetupScreenHandler::Bind(MultiDeviceSetupScreen* screen) {
 
 void MultiDeviceSetupScreenHandler::Show() {
   AllowJavascript();
-  FireWebUIListener("multidevice_setup.initializeSetupFlow");
   ShowScreen(kScreenId);
+  FireWebUIListener("multidevice_setup.initializeSetupFlow");
 }
 
 void MultiDeviceSetupScreenHandler::Hide() {}
