chrome/browser/resources/chromeos/multidevice_setup/multidevice_setup_post_oobe.js
@@ -44,10 +44,16 @@ Polymer({
   attached: function() {
     this.delegate_ = new multidevice_setup.PostOobeDelegate();
     this.$$('multidevice-setup').initializeSetupFlow();
+    this.onForwardButtonFocusRequested_();
   },
 
   /** @private */
   onExitRequested_: function() {
     chrome.send('dialogClose');
   },
+
+  /** @private */
+  onForwardButtonFocusRequested_: function() {
+    this.$$('#forward-button').focus();
+  }
 });
