ui/webui/resources/cr_components/chromeos/multidevice_setup/multidevice_setup.js
@@ -203,6 +203,7 @@ cr.define('multidevice_setup', function() {
             }
 
             this.visiblePageName_ = PageName.SUCCESS;
+            this.fire('forward-button-focus-requested');
           })
           .catch((error) => {
             console.warn('Mojo service failure: ' + error);
